_sass/layout/_masthead.scss
/* ==========================================================================
   MASTHEAD
   ========================================================================== */

.masthead {
  position: fixed;
  background: var(--global-bg-color);
  height: fit-content;
  top: 0;
  width: 100%;

  -webkit-animation: intro 0.3s both;
          animation: intro 0.3s both;
  -webkit-animation-delay: 0.15s;
          animation-delay: 0.15s;
  z-index: 20;

  &::after {
    content: "";
    position: absolute;
    bottom: 0;
    height: 1px;
    background: var(--global-border-color);
    width: 100%;
  }

  &__inner-wrap {
    @include container;
    @include clearfix;
    padding: 0.5em 1em;
    font-family: $sans-serif-narrow;

    @include breakpoint($x-large) {
      max-width: $x-large;
    }

    nav {
      z-index: 10;
    }

    a {
      text-decoration: none;
    }
  }
}

.masthead__menu {

  ul {
    margin: 0;
    padding: 0;
    clear: both;
    list-style-type: none;
  }
}

.masthead__menu-item {
  background-color: var(--global-bg-color);
  display: block;
  list-style-type: none;
  white-space: nowrap;

  &--lg {
    padding-right: 2em;
    font-weight: 700;
  }
}

.masthead__menu-item.selected a {
  color: var(--global-text-color);
  font-weight: 700;
  border-bottom: 2px solid var(--global-text-color);
  pointer-events: none; /* Move this here */
  cursor: default; /* Move this here too */
}

.masthead__menu-item.selected a:hover {
  color: var(--global-text-color);
  border-bottom: 2px solid var(--global-text-color);
  /* No need to repeat pointer-events and cursor here */
}

// ==========================================================================
// GREEDY NAVIGATION
// ==========================================================================

// Right-align masthead navigation buttons while keeping site title on the left.
.greedy-nav .visible-links {
  display: flex;
  align-items: center;
  width: 100%;
}

.greedy-nav .visible-links > li:first-child {
  flex: 1; // pushes remaining <li> items to the right
}

